<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/header"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header"
        android:background="@color/header">

        <ImageView
            android:id="@+id/iv_main_home"
            android:layout_width="@dimen/icon_width_30"
            android:layout_height="@dimen/icon_width_30"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/widget_container_first_margin"
            app:srcCompat="@drawable/ic_home_black_24dp"
            android:tint="@color/white"
            android:clickable="true"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            style="@style/Widget.TextView.Header.Main"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search_black_24dp"
            tools:ignore="VectorDrawableCompat"
            android:tint="@color/white"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:visibility="invisible"/>

    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/switch_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/header"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    style="@style/Widget.TextView.Header"
                    android:id="@+id/tip_vehicle_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_vehicle_ticket_num"/>
                <com.bob.android.clgl.widget.CustomEditText
                    style="@style/Widget.TextView.content"
                    android:id="@+id/edt_vehicle_ticket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:letterSpacing="0.5"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:id="@+id/img_scan"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:tint="@color/header"
                    />
            </LinearLayout>
            <View
                style="@style/gray_horizontal_line"
                android:layout_marginTop="@dimen/widget_container_length_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    style="@style/Widget.TextView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_vehicle_ticket_type"/>
                <com.bob.android.clgl.widget.CustomEditText
                    style="@style/Widget.TextView.content"
                    android:id="@+id/edt_vehicle_ticket_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <View
                style="@style/gray_horizontal_line"
                android:layout_marginTop="@dimen/widget_container_length_10" />

            <LinearLayout
                android:id="@+id/lin_vehicle_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    style="@style/Widget.TextView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_vehicle_num"/>

                <TextView
                    style="@style/Widget.TextView.content"
                    android:id="@+id/edt_vehicle_num"
                    android:layout_width="0dp"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:id="@+id/lin_sps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone">
                    <Spinner
                        android:id="@+id/sp_vehicle_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"/>
                    <Spinner
                        android:id="@+id/sp_vehicle_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"/>
                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/gray_horizontal_line"
                android:layout_marginTop="@dimen/widget_container_length_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    style="@style/Widget.TextView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_vehicle_department"/>
                <com.bob.android.clgl.widget.CustomEditText
                    style="@style/Widget.TextView.content"
                    android:id="@+id/edt_vehicle_department"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <View
                style="@style/gray_horizontal_line"
                android:layout_marginTop="@dimen/widget_container_length_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    style="@style/Widget.TextView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/tv_vehicle_weight"/>
                <com.bob.android.clgl.widget.CustomEditText
                    style="@style/Widget.TextView.content"
                    android:id="@+id/edt_vehicle_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <TextView
                    style="@style/Widget.TextView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_vehicle_all_weight"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"/>
                <com.bob.android.clgl.widget.CustomEditText
                    style="@style/Widget.TextView.content"
                    android:id="@+id/edt_vehicle_all_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <View
                style="@style/gray_horizontal_line"
                android:layout_marginTop="@dimen/widget_container_length_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    style="@style/Widget.TextView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_current_date_time"
                    />
                <com.bob.android.clgl.widget.CustomEditText
                    style="@style/Widget.TextView.content"
                    android:id="@+id/edt_current_date_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <com.rey.material.widget.Button
            android:id="@+id/btn_get_data"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height_40"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/widget_container_length_20"
            android:layout_weight="1"
            android:text="车辆信息"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:v_styleId="@array/button_login_wave_color" />

        <com.rey.material.widget.Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height_40"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/widget_container_length_20"
            android:layout_weight="1"
            android:text="信息确认"
            android:textSize="20sp"
            android:textStyle="bold"
            app:v_styleId="@array/button_login_wave_color" />
    </LinearLayout>
</RelativeLayout>
