<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@color/header"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header"
        android:background="@color/header">

        <ImageView
            android:id="@+id/iv_main_home"
            android:layout_width="@dimen/icon_width_30"
            android:layout_height="@dimen/icon_width_30"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/widget_container_first_margin"
            app:srcCompat="@drawable/ic_home_black_24dp"
            android:tint="@color/white"
            android:clickable="true"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            style="@style/Widget.TextView.Header.Main"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search_black_24dp"
            tools:ignore="VectorDrawableCompat"
            android:tint="@color/white"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:visibility="invisible"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            style="@style/Widget.TextView.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发票类型："/>
        
        <Spinner
            android:id="@+id/sp_psqd_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            style="@style/Widget.TextView.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="跟  车  人："/>
        <!--<Spinner
            android:id="@+id/sp_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
-->
        <TextView
            android:id="@+id/tv_select_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="选择跟车人"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"/>
       <!-- <EditText
            android:id="@+id/edt_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/edit_text_back_sharp"/>-->
        <!--<ImageView
            android:id="@+id/img_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_assignment_ind_black_24dp"
            />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/btn_create_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_button_create_password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_check_ticket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/widget_container_length_10"
                android:text="@string/tv_button_check_ticket"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tip_user"
            style="@style/Widget.TextView.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/material_red"
            android:layout_marginLeft="15dp"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            >

            <TextView
                style="@style/Widget.TextView.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tip_remaided_ticket"/>

            <TextView
                android:id="@+id/tv_remaid_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginLeft="@dimen/widget_container_length_10"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:padding="10dp"
            android:text="000000"
            android:letterSpacing="0.5"
            android:textColor="@color/widget_dialog_light_theme_text"
            android:background="@drawable/password_background"
            />
    </LinearLayout>


</LinearLayout>
